# aprsd-twitter-plugin

./: .pre-commit-config.yaml  AUTHORS  ChangeLog  LICENSE  Makefile  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
aprsd_twitter_plugin/: __init__.py  aprsd_twitter_plugin.py  cli.py  twitter.py
aprsd_twitter_plugin/conf/: __init__.py  opts.py  twitter.py
docs/: Makefile  clean_docs.py  conf.py  index.rst  installation.rst
tests/: __init__.py  test_aprsd_twitter_plugin.py
