[metadata]
name = aprsd_twitter_plugin
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Walter A. Boring IV
author_email = waboring@hemna.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
classifier =
    Topic :: Communications :: Ham Radio
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description_file =
    README.rst
summary = Python APRSD plugin to send tweets

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    aprsd_twitter_plugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[mypy]
ignore_missing_imports = True
strict = True
